--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.5.2
-backports.zoneinfo==0.2.1;python_version<"3.8.8"
+#backports.zoneinfo==0.2.1;python_version<"3.8.8"
 dj-database-url==1.0.0
 Django==4.1.2
 django-heroku==0.3.1
